--- a/gps_tracker.ioc
+++ b/gps_tracker.ioc
@@ -76,47 +76,53 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
-RCC.ADCFreq_Value=32000000
-RCC.AHBFreq_Value=32000000
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=32000000
-RCC.APB2Freq_Value=32000000
-RCC.APB2TimFreq_Value=32000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false
+RCC.ADCFreq_Value=16000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
+RCC.AHBFreq_Value=8000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=4000000
+RCC.APB1TimFreq_Value=8000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=4000000
+RCC.APB2TimFreq_Value=8000000
 RCC.CRSFreq_Value=48000000
-RCC.CortexFreq_Value=32000000
-RCC.FCLKCortexFreq_Value=32000000
-RCC.FLatency=FLASH_LATENCY_1
+RCC.CortexFreq_Value=8000000
+RCC.FCLKCortexFreq_Value=8000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=32000000
+RCC.HCLKFreq_Value=8000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
-RCC.HSICalibrationValue=16
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=32000000
-RCC.I2C3Freq_Value=32000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSICalibrationValue,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSIClockRange,MSI_VALUE,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,SYSCLKFreq_VALUE,USART1Freq_Value,USART2Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-RCC.LPTIM1Freq_Value=32000000
-RCC.LPTIM2Freq_Value=32000000
-RCC.LPUART1Freq_Value=32000000
+RCC.I2C1Freq_Value=4000000
+RCC.I2C3Freq_Value=4000000
+RCC.IPParameters=ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSIAutoCalibration,MSIClockRange,MSI_VALUE,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.LPTIM1Freq_Value=4000000
+RCC.LPTIM2Freq_Value=4000000
+RCC.LPUART1Freq_Value=4000000
 RCC.LSCOPinFreq_Value=32000
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=32000000
+RCC.MCO1PinFreq_Value=16000000
+RCC.MSIAutoCalibration=DISABLED
 RCC.MSIClockRange=RCC_MSIRANGE_10
 RCC.MSI_VALUE=32000000
 RCC.PLLQoutputFreq_Value=128000000
 RCC.PLLRCLKFreq_Value=128000000
-RCC.PWRFreq_Value=32000000
+RCC.PWRFreq_Value=16000000
 RCC.RNGFreq_Value=32000000
-RCC.SYSCLKFreq_VALUE=32000000
-RCC.USART1Freq_Value=32000000
-RCC.USART2Freq_Value=32000000
+RCC.SYSCLKFreq_VALUE=16000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI
+RCC.USART1Freq_Value=4000000
+RCC.USART2Freq_Value=4000000
 RCC.USBFreq_Value=32000000
 RCC.VCOInputFreq_Value=32000000
 RCC.VCOOutputFreq_Value=256000000
-SPI1.CalculateBaudRate=16.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI1.CalculateBaudRate=2.0 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 VP_FATFS_VS_Generic.Mode=User_defined
