--- a/gps_tracker.ioc
+++ b/gps_tracker.ioc
@@ -27,6 +27,7 @@ FATFS.IPParameters=_USE_LFN,_MAX_SS
 FATFS._MAX_SS=4096
 FATFS._USE_LFN=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L412KBU3
 Mcu.Family=STM32L4
@@ -41,14 +42,15 @@ Mcu.IPNb=7
 Mcu.Name=STM32L412KBUx
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PA1
-Mcu.Pin1=PA5
-Mcu.Pin2=PA6
-Mcu.Pin3=PA7
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=VP_FATFS_VS_Generic
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
+Mcu.Pin1=PA3
+Mcu.Pin2=PA5
+Mcu.Pin3=PA6
+Mcu.Pin4=PA7
+Mcu.Pin5=PA9
+Mcu.Pin6=PA10
+Mcu.Pin7=VP_FATFS_VS_Generic
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L412KBUx
@@ -58,6 +60,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -72,6 +75,10 @@ PA1.Mode=Full_Duplex_Master
 PA1.Signal=SPI1_SCK
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA3.GPIOParameters=GPIO_PuPd
+PA3.GPIO_PuPd=GPIO_NOPULL
+PA3.Locked=true
+PA3.Signal=GPXTI3
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Mode=Full_Duplex_Master
@@ -150,6 +157,8 @@ RCC.USART2Freq_Value=4000000
 RCC.USBFreq_Value=32000000
 RCC.VCOInputFreq_Value=32000000
 RCC.VCOOutputFreq_Value=256000000
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=2.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
