sd card: OK, button: OK, gps: ? ehh.. missing characters

--- a/gps_tracker.ioc
+++ b/gps_tracker.ioc
@@ -8,7 +8,7 @@ Dma.RequestsNb=2
 Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.1.Instance=DMA1_Channel5
 Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.1.MemInc=DMA_MINC_DISABLE
 Dma.USART1_RX.1.Mode=DMA_NORMAL
 Dma.USART1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_RX.1.PeriphInc=DMA_PINC_DISABLE
@@ -42,7 +42,7 @@ Mcu.IPNb=7
 Mcu.Name=STM32L412KBUx
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PA1
-Mcu.Pin1=PA3
+Mcu.Pin1=PA4
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
@@ -60,7 +60,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -75,10 +75,8 @@ PA1.Mode=Full_Duplex_Master
 PA1.Signal=SPI1_SCK
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA3.GPIOParameters=GPIO_PuPd
-PA3.GPIO_PuPd=GPIO_NOPULL
-PA3.Locked=true
-PA3.Signal=GPXTI3
+PA4.Locked=true
+PA4.Signal=GPXTI4
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Mode=Full_Duplex_Master
@@ -157,8 +155,8 @@ RCC.USART2Freq_Value=4000000
 RCC.USBFreq_Value=32000000
 RCC.VCOInputFreq_Value=32000000
 RCC.VCOOutputFreq_Value=256000000
-SH.GPXTI3.0=GPIO_EXTI3
-SH.GPXTI3.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=2.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
