--- a/gps_tracker.ioc
+++ b/gps_tracker.ioc
@@ -8,7 +8,7 @@ Dma.RequestsNb=2
 Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.1.Instance=DMA1_Channel5
 Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.1.MemInc=DMA_MINC_DISABLE
+Dma.USART1_RX.1.MemInc=DMA_MINC_ENABLE
 Dma.USART1_RX.1.Mode=DMA_NORMAL
 Dma.USART1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_RX.1.PeriphInc=DMA_PINC_DISABLE
