WORKS!!! +last log indicator led added

--- a/gps_tracker.ioc
+++ b/gps_tracker.ioc
@@ -48,9 +48,10 @@ Mcu.Pin3=PA6
 Mcu.Pin4=PA7
 Mcu.Pin5=PA9
 Mcu.Pin6=PA10
-Mcu.Pin7=VP_FATFS_VS_Generic
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin7=PB3 (JTDO/TRACESWO)
+Mcu.Pin8=VP_FATFS_VS_Generic
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L412KBUx
@@ -85,6 +86,8 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB3\ (JTDO/TRACESWO).Locked=true
+PB3\ (JTDO/TRACESWO).Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
