--- a/gps_tracker.ioc
+++ b/gps_tracker.ioc
@@ -33,25 +33,33 @@ Mcu.CPN=STM32L412KBU3
 Mcu.Family=STM32L4
 Mcu.IP0=DMA
 Mcu.IP1=FATFS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP2=I2C1
+Mcu.IP3=I2C3
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=TIM6
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32L412KBUx
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PA1
 Mcu.Pin1=PA4
+Mcu.Pin10=PB6
+Mcu.Pin11=PB7
+Mcu.Pin12=VP_FATFS_VS_Generic
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
 Mcu.Pin5=PA9
 Mcu.Pin6=PA10
 Mcu.Pin7=PB3 (JTDO/TRACESWO)
-Mcu.Pin8=VP_FATFS_VS_Generic
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin8=PB4 (NJTRST)
+Mcu.Pin9=PB5
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L412KBUx
@@ -70,6 +78,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Mode=Full_Duplex_Master
@@ -82,12 +91,21 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
+PA7.Mode=I2C
+PA7.Signal=I2C3_SCL
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Signal=GPIO_Output
+PB4\ (NJTRST).Mode=I2C
+PB4\ (NJTRST).Signal=I2C3_SDA
+PB5.Locked=true
+PB5.Mode=Full_Duplex_Master
+PB5.Signal=SPI1_MOSI
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -116,7 +134,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=8000000
@@ -160,13 +178,14 @@ RCC.VCOInputFreq_Value=32000000
 RCC.VCOOutputFreq_Value=256000000
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=2.0 MBits/s
-SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=10000
+TIM6.Prescaler=79
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
@@ -174,6 +193,8 @@ VP_FATFS_VS_Generic.Mode=User_defined
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-L412KB
 boardIOC=true
 isbadioc=false
