sensor inits work, timer doesn't want to start

--- a/gps_tracker.ioc
+++ b/gps_tracker.ioc
@@ -2,27 +2,27 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=USART1_TX
-Dma.Request1=USART1_RX
+Dma.Request0=USART2_RX
+Dma.Request1=USART2_TX
 Dma.RequestsNb=2
-Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.1.Instance=DMA1_Channel5
-Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.1.Mode=DMA_NORMAL
-Dma.USART1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.0.Instance=DMA1_Channel4
-Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.0.Mode=DMA_NORMAL
-Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.0.Instance=DMA1_Channel6
+Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.0.Mode=DMA_NORMAL
+Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.1.Instance=DMA1_Channel7
+Dma.USART2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.1.Mode=DMA_NORMAL
+Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FATFS.IPParameters=_USE_LFN,_MAX_SS
 FATFS._MAX_SS=4096
 FATFS._USE_LFN=1
@@ -39,26 +39,26 @@ Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SPI1
 Mcu.IP7=SYS
-Mcu.IP8=TIM6
-Mcu.IP9=USART1
+Mcu.IP8=TIM1
+Mcu.IP9=USART2
 Mcu.IPNb=10
 Mcu.Name=STM32L412KBUx
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PA1
-Mcu.Pin1=PA4
-Mcu.Pin10=PB6
-Mcu.Pin11=PB7
+Mcu.Pin1=PA2
+Mcu.Pin10=PB4 (NJTRST)
+Mcu.Pin11=PB5
 Mcu.Pin12=VP_FATFS_VS_Generic
 Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin2=PA5
-Mcu.Pin3=PA6
-Mcu.Pin4=PA7
-Mcu.Pin5=PA9
-Mcu.Pin6=PA10
-Mcu.Pin7=PB3 (JTDO/TRACESWO)
-Mcu.Pin8=PB4 (NJTRST)
-Mcu.Pin9=PB5
+Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin2=PA3
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PB3 (JTDO/TRACESWO)
 Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -66,8 +66,8 @@ Mcu.UserName=STM32L412KBUx
 MxCube.Version=6.7.0
 MxDb.Version=DB.6.0.70
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -78,13 +78,20 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
-NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_BRK_TIM15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Mode=Full_Duplex_Master
 PA1.Signal=SPI1_SCK
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
+PA10.Mode=I2C
+PA10.Signal=I2C1_SDA
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA4.Locked=true
 PA4.Signal=GPXTI4
 PA5.Locked=true
@@ -93,8 +100,8 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=I2C
 PA7.Signal=I2C3_SCL
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
+PA9.Mode=I2C
+PA9.Signal=I2C1_SCL
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Signal=GPIO_Output
 PB4\ (NJTRST).Mode=I2C
@@ -102,10 +109,6 @@ PB4\ (NJTRST).Signal=I2C3_SDA
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -134,7 +137,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_TIM16_Init-TIM16-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=8000000
@@ -179,22 +182,24 @@ RCC.VCOOutputFreq_Value=256000000
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SPI1.CalculateBaudRate=2.0 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM6.IPParameters=Prescaler,Period
-TIM6.Period=10000
-TIM6.Prescaler=79
-USART1.BaudRate=9600
-USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
-USART1.VirtualMode-Asynchronous=VM_ASYNC
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM1.Period=10000
+TIM1.Prescaler=159
+USART2.BaudRate=9600
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_FATFS_VS_Generic.Mode=User_defined
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=NUCLEO-L412KB
 boardIOC=true
 isbadioc=false
