only gps to file

--- a/gps_tracker.ioc
+++ b/gps_tracker.ioc
@@ -39,7 +39,7 @@ Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SPI1
 Mcu.IP7=SYS
-Mcu.IP8=TIM1
+Mcu.IP8=TIM6
 Mcu.IP9=USART2
 Mcu.IPNb=10
 Mcu.Name=STM32L412KBUx
@@ -50,7 +50,7 @@ Mcu.Pin10=PB4 (NJTRST)
 Mcu.Pin11=PB5
 Mcu.Pin12=VP_FATFS_VS_Generic
 Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PA3
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
@@ -78,10 +78,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
-NVIC.TIM1_BRK_TIM15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM1_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Mode=Full_Duplex_Master
@@ -137,7 +134,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_TIM16_Init-TIM16-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=8000000
@@ -187,10 +184,10 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM1.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM1.Period=10000
-TIM1.Prescaler=159
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM6.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM6.Period=10000
+TIM6.Prescaler=799
 USART2.BaudRate=9600
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
@@ -198,8 +195,8 @@ VP_FATFS_VS_Generic.Mode=User_defined
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM1_VS_ClockSourceINT.Mode=Internal
-VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-L412KB
 boardIOC=true
 isbadioc=false
